--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Pagina inicio de este videoclub">
 		<meta name="keywords" content="index, contacto, , , , ">
-		<link rel="stylesheet" type="text/css" href="css/estilo.css">
-		<link rel="stylesheet" media="screen and (max-width: 800px)" type="text/css" href="css/estilomovil.css">
+		<link rel="stylesheet" type="text/css" href="estilo.css">
+		<link rel="stylesheet" media="screen and (max-width: 800px)" type="text/css" href="estilomovil.css">
 		<link rel="icon" type="image/png" sizes="16x16" href="img/ico.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="img/ico.png">
 	</head>
@@ -47,10 +47,10 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">Inicio</a></li>
-				<li><a href="subwebs/listarecetas.html">Recetas</a></li>
-				<li><a href="subwebs/contacto.html">Contacto</a></li>
-				<li><a href="subwebs/registro.html">Registro</a></li>
-				<li><a href="subwebs/subir.html">Receta a subir</a></li>
+				<li><a href="listarecetas.html">Recetas</a></li>
+				<li><a href="contacto.html">Contacto</a></li>
+				<li><a href="registro.html">Registro</a></li>
+				<li><a href="subir.html">Receta a subir</a></li>
 			</ul>
 		</nav>
 		<h2>Recetas para cualquier situación</h2>
@@ -71,28 +71,28 @@
 				</p>
 			</aside>
 			<figure class="figureinicio">
-				<img class="imginicio" src="img/imginicio.jpg" alt="plato">
+				<img class="imginicio" src="imginicio.jpg" alt="plato">
 			</figure>
 			<div class="flex-container">
 				<figure class="flex1">
-					<img class="imginicio1" src="img/recetainicio1.jpg" alt="recetainicioa"
+					<img class="imginicio1" src="recetainicio1.jpg" alt="recetainicioa"
 					>
 				</figure>
 				<figure class="flex2">
-					<img class="imginicio2" src="img/recetainicio2.jpg" alt="recetainiciob">
+					<img class="imginicio2" src="recetainicio2.jpg" alt="recetainiciob">
 				</figure>
 				<figure class="flex3">
-					<img class="imginicio3" src="img/recetainicio3.jpg" alt="recetainicioc">
+					<img class="imginicio3" src="recetainicio3.jpg" alt="recetainicioc">
 				</figure>
 			</div>
 		</div>
 		<footer class="mapalist">
 			<ul>
 				<li><a href="index.html">Inicio</a></li>
-				<li><a href="subwebs/listarecetas.html">Recetas</a></li>
-				<li><a href="subwebs/contacto.html">Contacto</a></li>
-				<li><a href="subwebs/registro.html">Registro</a></li>
-				<li><a href="subwebs/subir.html">Receta a subir</a></li>
+				<li><a href="listarecetas.html">Recetas</a></li>
+				<li><a href="contacto.html">Contacto</a></li>
+				<li><a href="registro.html">Registro</a></li>
+				<li><a href="subir.html">Receta a subir</a></li>
 			</ul>
 		</footer>
 	</body>
