--- a/registro.html
+++ b/registro.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Pagina inicio de este videoclub">
 		<meta name="keywords" content="index, contacto, , , , ">
-		<link rel="stylesheet" type="text/css" href="../css/estilo.css">
-		<link rel="stylesheet" media="screen and (max-width: 800px)" type="text/css" href="../css/estilomovil.css">
-		<link rel="icon" type="image/png" sizes="16x16" href="../img/ico.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="../img/ico.png">
+		<link rel="stylesheet" type="text/css" href="estilo.css">
+		<link rel="stylesheet" media="screen and (max-width: 800px)" type="text/css" href="estilomovil.css">
+		<link rel="icon" type="image/png" sizes="16x16" href="img/ico.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="img/ico.png">
 	</head>
 	<body>
 		<header>
@@ -24,7 +24,7 @@
 				</div>
 				<input class="submitlogin" type="submit" name="Enviar" value="Iniciar Sesión">
 			</form>
-			<h1><a href="../index.html">Recetas de cocina</a></h1>
+			<h1><a href="index.html">Recetas de cocina</a></h1>
 			<form method="POST" autocomplete="off" class="buscador">
 				<datalist id="buscador">
 					<option value="Tomates horneados con queso panela"></option>
@@ -41,12 +41,12 @@
 					<option value="Pasta de champiñones y espinaca"></option>
 				</datalist>
 				<input class="inputinicio" type="search" placeholder="Buscar aquí..." list="buscador" name="recetas">
-				<input type="image" src="../img/lupa.png" alt="buscadorlupa" class="imgbuscador">
+				<input type="image" src="img/lupa.png" alt="buscadorlupa" class="imgbuscador">
 			</form>
 		</header>
 		<nav>
 			<ul>
-				<li><a href="../index.html">Inicio</a></li>
+				<li><a href="index.html">Inicio</a></li>
 				<li><a href="listarecetas.html">Recetas</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
 				<li><a href="registro.html">Registro</a></li>
