--- a/tomateshorneadosconquesopanela.html
+++ b/tomateshorneadosconquesopanela.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Pagina inicio de este videoclub">
 		<meta name="keywords" content="index, contacto, , , , ">
-		<link rel="stylesheet" type="text/css" href="../css/estilo.css">
-		<link rel="stylesheet" media="screen and (max-width: 800px)" type="text/css" href="../css/estilomovil.css">
+		<link rel="stylesheet" type="text/css" href="estilo.css">
+		<link rel="stylesheet" media="screen and (max-width: 800px)" type="text/css" href="estilomovil.css">
 		<link rel="icon" type="image/png" sizes="16x16" href="../img/ico.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="../img/ico.png">
 	</head>
@@ -24,7 +24,7 @@
 				</div>
 				<input class="submitlogin" type="submit" name="Enviar" value="Iniciar Sesión">
 			</form>
-			<h1><a href="../index.html">Recetas de cocina</a></h1>
+			<h1><a href="index.html">Recetas de cocina</a></h1>
 			<form method="POST" autocomplete="off" class="buscador">
 				<datalist id="buscador">
 					<option value="Tomates horneados con queso panela"></option>
@@ -46,7 +46,7 @@
 		</header>
 		<nav>
 			<ul>
-				<li><a href="../index.html">Inicio</a></li>
+				<li><a href="index.html">Inicio</a></li>
 				<li><a href="listarecetas.html">Recetas</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
 				<li><a href="registro.html">Registro</a></li>
@@ -56,7 +56,7 @@
 		<h2>Tomates horneados con queso panela</h2>
 		<div class="gridreceta1">
 			<figure class="tomate1">
-				<img src="../img/receta1.jpg" alt="tomates">
+				<img src="receta1.jpg" alt="tomates">
 			</figure>
 			<div class="ingtitulo"><h3>Ingredientes:</h3></div>
 			<aside class="ingtomates">
@@ -82,7 +82,7 @@
 				¿No parecen una delicia? ¡Pues lo son! Intenta esta receta. Créeme; no te arrepentirás.
 			</aside>
 			<figure class="tomate2">
-				<img src="../img/tomates.jpg" alt="4tomates">
+				<img src="tomates.jpg" alt="4tomates">
 			</figure>
 			<iframe class="videot1" src="https://www.youtube.com/embed/tVqwn0FfJQU" allowfullscreen></iframe>
 			<video controls="controls" class="videot2">
