--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<meta name="keywords" content="index, contacto, , , , ">
 		<link rel="stylesheet" type="text/css" href="estilo.css">
 		<link rel="stylesheet" media="screen and (max-width: 800px)" type="text/css" href="estilomovil.css">
-		<link rel="icon" type="image/png" sizes="16x16" href="img/ico.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="img/ico.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="ico.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="ico.png">
 	</head>
 	<body>
 		<header>
