--- a/listarecetas.html
+++ b/listarecetas.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Pagina inicio de este videoclub">
 		<meta name="keywords" content="index, contacto, , , , ">
-		<link rel="stylesheet" type="text/css" href="../css/estilo.css">
-		<link rel="stylesheet" media="screen and (max-width: 800px)" type="text/css" href="../css/estilomovil.css">
-		<link rel="icon" type="image/png" sizes="16x16" href="../img/ico.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="../img/ico.png">
+		<link rel="stylesheet" type="text/css" href="estilo.css">
+		<link rel="stylesheet" media="screen and (max-width: 800px)" type="text/css" href="estilomovil.css">
+		<link rel="icon" type="image/png" sizes="16x16" href="ico.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="ico.png">
 	</head>
 	<body>
 		<header>
@@ -46,7 +46,7 @@
 		</header>
 		<nav>
 			<ul>
-				<li><a href="../index.html">Inicio</a></li>
+				<li><a href="index.html">Inicio</a></li>
 				<li><a href="listarecetas.html">Recetas</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
 				<li><a href="registro.html">Registro</a></li>
@@ -57,109 +57,109 @@
 		<div class="recetas">
 			<figure id="receta1">
 				<a href="#receta1">
-					<img src="../img/receta1.jpg" alt="tomates">
+					<img src="receta1.jpg" alt="tomates">
 				</a>
 				<a href="#">
-					<img src="../img/cerrar.png" alt="cerrar" class="cerrar">
+					<img src="cerrar.png" alt="cerrar" class="cerrar">
 				</a>
 				<a href="tomateshorneadosconquesopanela.html"><figcaption>1. Tomates horneados con queso panela</figcaption></a>
 			</figure>
 			<figure id="receta2">
 				<a href="#receta2">
-					<img src="../img/receta2.jpg" alt="risotto">
+					<img src="receta2.jpg" alt="risotto">
 				</a>
 				<a href="#">
-					<img src="../img/cerrar.png" alt="cerrar" class="cerrar">
+					<img src="cerrar.png" alt="cerrar" class="cerrar">
 				</a>
 				<a href="risotto.html"><figcaption>2. Risotto de champiñones</figcaption></a>
 			</figure>
 			<figure id="receta3">
 				<a href="#receta3">
-					<img src="../img/receta3.jpg" alt="calabacin">
+					<img src="receta3.jpg" alt="calabacin">
 				</a>
 				<a href="#">
-					<img src="../img/cerrar.png" alt="cerrar" class="cerrar">
+					<img src="cerrar.png" alt="cerrar" class="cerrar">
 				</a>
 				<a href="espaguetisdecalabacinsinpasta.html"><figcaption>3. Espaguetis de calabacín sin pasta</figcaption></a>
 			</figure>
 			<figure id="receta4">
 				<a href="#receta4">
-					<img src="../img/receta4.jpg" alt="sandwich">
+					<img src="receta4.jpg" alt="sandwich">
 				</a>
 				<a href="#">
-					<img src="../img/cerrar.png" alt="cerrar" class="cerrar">
+					<img src="cerrar.png" alt="cerrar" class="cerrar">
 				</a>
 				<figcaption>4. Sándwich de manzana con queso</figcaption>
 			</figure>
 			<figure id="receta5">
 				<a href="#receta5">
-					<img src="../img/receta5.jpg" alt="pizza">
+					<img src="receta5.jpg" alt="pizza">
 				</a>
 				<a href="#">
-					<img src="../img/cerrar.png" alt="cerrar" class="cerrar">
+					<img src="cerrar.png" alt="cerrar" class="cerrar">
 				</a>
 				<figcaption>5. Pan pizza con pollo</figcaption>
 			</figure>
 			<figure id="receta6">
 				<a href="#receta6">
-					<img src="../img/receta6.jpg" alt="ensalada">
+					<img src="receta6.jpg" alt="ensalada">
 				</a>
 				<a href="#">
-					<img src="../img/cerrar.png" alt="cerrar" class="cerrar">
+					<img src="cerrar.png" alt="cerrar" class="cerrar">
 				</a>
 				<figcaption>6. Ensalada de ejotes y arándanos</figcaption>
 			</figure>
 			<figure id="receta7">
 				<a href="#receta7">
-					<img src="../img/receta7.jpg" alt="tazón">
+					<img src="receta7.jpg" alt="tazón">
 				</a>
 				<a href="#">
-					<img src="../img/cerrar.png" alt="cerrar" class="cerrar">
+					<img src="cerrar.png" alt="cerrar" class="cerrar">
 				</a>
 				<figcaption>7. Avena con yogurt y leche</figcaption>
 			</figure>
 			<figure id="receta8">
 				<a href="#receta8">
-					<img src="../img/receta8.jpg" alt="sopa">
+					<img src="receta8.jpg" alt="sopa">
 				</a>
 				<a href="#">
-					<img src="../img/cerrar.png" alt="cerrar" class="cerrar">
+					<img src="cerrar.png" alt="cerrar" class="cerrar">
 				</a>
 				<figcaption>8. Sopa de pollo</figcaption>
 			</figure>
 			<figure id="receta9">
 				<a href="#receta9">
-					<img src="../img/receta9.jpg" alt="pasta">
+					<img src="receta9.jpg" alt="pasta">
 				</a>
 				<a href="#">
-					<img src="../img/cerrar.png" alt="cerrar" class="cerrar">
+					<img src="cerrar.png" alt="cerrar" class="cerrar">
 				</a>
 				<figcaption>9. Pasta estilo Caprese</figcaption>
 			</figure>
 			<figure id="receta10">
 				<a href="#receta10">	
-					<img src="../img/receta10.jpg" alt="sopafria">
+					<img src="receta10.jpg" alt="sopafria">
 				</a>
 				<a href="#">
-					<img src="../img/cerrar.png" alt="cerrar" class="cerrar">
+					<img src="cerrar.png" alt="cerrar" class="cerrar">
 				</a>
 				<figcaption>10. Sopa fría de calabaza y curry</figcaption>
 			</figure>
 			<figure id="receta11">
 				<a href="#receta11">
-					<img src="../img/receta11.jpg" alt="minihamburguesa">
+					<img src="receta11.jpg" alt="minihamburguesa">
 				</a>
 				<a href="#">
-					<img src="../img/cerrar.png" alt="cerrar" class="cerrar">
+					<img src="cerrar.png" alt="cerrar" class="cerrar">
 				</a>
 				<figcaption>11. Mini hamburguesas gourmet</figcaption>
 			</figure>
 			<figure id="receta12">
 				<a href="#receta12">	
-					<img src="../img/receta12.jpg" alt="pastachampiñones">
+					<img src="receta12.jpg" alt="pastachampiñones">
 				</a>
 				<a href="#">
-					<img src="../img/cerrar.png" alt="cerrar" class="cerrar">
+					<img src="cerrar.png" alt="cerrar" class="cerrar">
 				</a>
 				<figcaption>12. Pasta de champiñones y espinaca</figcaption>
 			</figure>
