--- a/espaguetisdecalabacinsinpasta.html
+++ b/espaguetisdecalabacinsinpasta.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Pagina inicio de este videoclub">
 		<meta name="keywords" content="index, contacto, , , , ">
-		<link rel="stylesheet" type="text/css" href="../css/estilo.css">
-		<link rel="stylesheet" media="screen and (max-width: 800px)" type="text/css" href="../css/estilomovil.css">
-		<link rel="icon" type="image/png" sizes="16x16" href="../img/ico.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="../img/ico.png">
+		<link rel="stylesheet" type="text/css" href="estilo.css">
+		<link rel="stylesheet" media="screen and (max-width: 800px)" type="text/css" href="estilomovil.css">
+		<link rel="icon" type="image/png" sizes="16x16" href="ico.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="ico.png">
 	</head>
 	<body>
 		<header>
@@ -24,7 +24,7 @@
 				</div>
 				<input class="submitlogin" type="submit" name="Enviar" value="Iniciar Sesión">
 			</form>
-			<h1><a href="../index.html">Recetas de cocina</a></h1>
+			<h1><a href="index.html">Recetas de cocina</a></h1>
 			<form method="POST" autocomplete="off" class="buscador">
 				<datalist id="buscador">
 					<option value="Tomates horneados con queso panela"></option>
@@ -86,7 +86,7 @@
 				Añadimos sal y pimienta negra y servimos.
 			</aside>
 			<figure class="tomate2">
-				<img src="../img/calabacin.jpg" alt="4tomates">
+				<img src="calabacin.jpg" alt="4tomates">
 			</figure>
 			<iframe class="videot1" src="https://www.youtube.com/embed/BrnL0IHnCto" allowfullscreen></iframe>
 			<video controls="controls" class="videot2">
